appointment page mark up

--- a/client/src/components/HomePage/Home/Home.css
+++ b/client/src/components/HomePage/Home/Home.css
@@ -1,9 +1,9 @@
 .banner-bg {
     /* position:absolute; */
-    z-index:-1;
+    /* z-index:-1;
     top:0;
     left:0;
     width:100%;
     height:100%;
-    background-color:rgba(70, 64, 64, 0.116);
+    background-color:rgba(70, 64, 64, 0.116); */
 }
