--- a/client/src/components/HomePage/ContactUs/ContactUs.css
+++ b/client/src/components/HomePage/ContactUs/ContactUs.css
@@ -2,12 +2,13 @@
     position: relative;
     margin-top: 5rem;
     background-size: cover;
-    background-image: url(https://i.ibb.co/wdRfrqb/Mask-Group-1.png);
+    background-image: linear-gradient(rgba(0, 0, 0, .8), rgba(0, 0, 0, .7)), url(https://i.ibb.co/wdRfrqb/Mask-Group-1.png);
     background-repeat: no-repeat;
     background-position: center center;
     text-align: center;
     display: flex;
-    padding: 5rem
+    padding: 5rem;
+    color: white
 }
 
 .contact-form{
