shared folder created and header, footer reorganized, appointment calendar date state

--- a/client/src/components/SharedFolders/Header/Header.css
+++ b/client/src/components/SharedFolders/Header/Header.css
@@ -15,3 +15,9 @@
     z-index: -1;
 }
 
+.header-appointment {
+    height:730px;
+    position:relative;
+    background-image: url('https://i.ibb.co/xGczynr/Mask-Group-2.png');
+    background-size: cover,
+}
